advance of the page, adding the projects section with some trnsittions

--- a/index.html
+++ b/index.html
@@ -102,6 +102,28 @@
         </div>
       </div>
     </section>
+    <section class="recently-projects light-section d-fle flex-column">
+      <h2 class="tittle-section black-text">Projects</h2>
+      <h3 class="description-section">these are some of the projects done recently!</h3>
+      <!-- projects gallery--> 
+      <div class="container text-center projects-container">      
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <div class="proj-icons">
+                <i class="bi bi-calculator-fill"></i>
+              </div>
+              <div class="overlay">
+                <p>Calculator</p>
+                <div class="iconos-container">
+                  <a href=""></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
