--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       <!-- projects gallery--> 
       <div class="container text-center projects-container">      
         <div class="row">
+          <!-- project one--> 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="project">
               <div class="proj-icons">
@@ -116,11 +117,115 @@
               <div class="overlay">
                 <p>Calculator</p>
                 <div class="iconos-container">
-                  <a href=""></a>
+                  <a href="https://github.com/eduarmarin/calculator" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="https://eduarmarin.github.io/calculator/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-globe"></i>
+                  </a>
                 </div>
               </div>
             </div>
-          </div>
+          </div>          
+          <!-- project two--> 
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <div class="proj-icons">
+                <i class="bi bi-pencil-fill"></i>
+              </div>
+              <div class="overlay">
+                <p>Etch-A-Sketch</p>
+                <div class="iconos-container">
+                  <a href="https://github.com/eduarmarin/Etch-A-Sketch" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="https://eduarmarin.github.io/Etch-A-Sketch/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-globe"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>           
+          <!-- project three--> 
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <div class="proj-icons">
+                <i class="bi bi-scissors"></i>
+              </div>
+              <div class="overlay">
+                <p>RockScissorsPape</p>
+                <div class="iconos-container">
+                  <a href="https://github.com/eduarmarin/rockPaperScissors" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href=" https://eduarmarin.github.io/rockPaperScissors/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-globe"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>           
+          <!-- end project--> 
+          <!-- project four--> 
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <div class="proj-icons">
+                <i class="bi bi-file-break-fill"></i>
+              </div>
+              <div class="overlay">
+                <p>Landing-page</p>
+                <div class="iconos-container">
+                  <a href="https://github.com/eduarmarin/Landing-page" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="https://eduarmarin.github.io/Landing-page/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-globe"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>           
+          <!-- end project--> 
+          <!-- project five--> 
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <div class="proj-icons">
+                <i class="bi bi-0-circle"></i>
+              </div>
+              <div class="overlay">
+                <p>Recipes</p>
+                <div class="iconos-container">
+                  <a href="https://github.com/eduarmarin/odin-recipes" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="https://eduarmarin.github.io/odin-recipes/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-globe"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>           
+          <!-- end project--> 
+          <!-- project six--> 
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <div class="proj-icons">
+                <i class="bi bi-git"></i>
+              </div>
+              <div class="overlay">
+                <p>Git</p>
+                <div class="iconos-container">
+                  <a href="https://github.com/eduarmarin/git_test" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="https://github.com/eduarmarin/git_test" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-globe"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>           
+          <!-- end project--> 
         </div>
       </div>
     </section>
