new advance, add new sectio abour were to study programming

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Gloock&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -42,7 +42,7 @@
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center" >
             <img class="hero-image" src="images/edaur.jpeg" alt="profile pic" style="width: 225px; height: 210px; object-fit: cover; object-position: 20% 0;">
             <h1>Hi, This is Eduar!</h1>
-            <h2>Studying web developer at The Odin Project</h2>
+            <h2>Studying Full Stack JavaScript at The Odin Project</h2>
         </div>
         <div class="hero-inferior">
           <!-- <img class="hero-img-inferior img-fluid" src="images/imagen.svg" alt="monitor"> -->
@@ -165,7 +165,6 @@
               </div>
             </div>
           </div>           
-          <!-- end project--> 
           <!-- project four--> 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="project">
@@ -185,7 +184,6 @@
               </div>
             </div>
           </div>           
-          <!-- end project--> 
           <!-- project five--> 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="project">
@@ -205,7 +203,6 @@
               </div>
             </div>
           </div>           
-          <!-- end project--> 
           <!-- project six--> 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="project">
@@ -225,8 +222,99 @@
               </div>
             </div>
           </div>           
-          <!-- end project--> 
         </div>
+      </div>
+      <a href="https://github.com/eduarmarin?tab=repositories" target="_blank" rel="noopener noreferrer">
+        <button type="button" class="btn btn-info">
+          More projects
+          <i class="bi bi-arrow-right-circle-fill"></i>
+        </button>
+      </a>
+    </section>
+    <section class="articles justify-content-start">
+      <h2 class="tittle-section">Articles</h2>
+      <div class="card">
+        <div class="card-header">
+          More Recent
+        </div>
+        <ul class="list-group list-group-flush">
+          <a href="https://resources.github.com/devops/build-your-devops-practice-on-github/" target="_blank" rel="noopener noreferrer">
+            <li class="list-group-item">Defining DevOps: Build Your DevOps Practice on GitHub</li>
+          </a>
+          <a href="https://resources.github.com/devops/github-productivity-guide/" target="_blank" rel="noopener noreferrer">
+            <li class="list-group-item">How to increase developer productivity</li>
+          </a>
+          <a href="https://resources.github.com/devops/6-devops-pitfalls/" target="_blank" rel="noopener noreferrer">
+            <li class="list-group-item">6 DevOps pitfalls and how to avoid them</li>
+          </a>
+          <a href="https://resources.github.com/devops/book-on-github-enterprise-adoption/" target="_blank" rel="noopener noreferrer">
+            <li class="list-group-item">The book on GitHub Enterprise Cloud Adoption</li>
+          </a>
+          <a href="https://resources.github.com/ghazdo/" target="_blank" rel="noopener noreferrer">
+            <li class="list-group-item">GitHub Advanced Security & Azure DevOps</li>
+          </a>
+        </ul>
+      </div>
+      <a href="https://resources.github.com/" target="_blank" rel="noopener noreferrer">
+        <button type="button" class="btn btn-info">
+          More articles
+          <i class="bi bi-arrow-right-circle-fill"></i>
+        </button>
+      </a>
+    </section>
+    <section class="studying light-section">
+      <h2 class="tittle-section">Learn Code</h2>
+      <h3 class="description-section">Coding for Beginners and How to Learn Programming for Free</h3>
+      <div id="carouselExample" class="carousel slide carousel-dark">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container carousel-container ">
+                <img class="studying-imagen" src="images/theodinproject.png" alt="The odin project">
+              <p class="studying-text">
+                Learn to code HTML, CSS, Full stack JavaScript, Ruby and more, this course is only in English
+              </p>
+              <div class="studying-link">
+                <a href="https://www.theodinproject.com/dashboard" target="_blank" rel="noopener noreferrer">
+                  <i class="link-studyg bi bi-globe"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <img class="studying-imagen" src="images/fcc_secondary_large.svg" alt="The odin project">
+                <p class="studying-text">
+                  You can earn many certifications about coddding, there are many tutorials in english and even spanish
+                </p>
+              <div class="studying-link">
+                <a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer">
+                  <i class="link-studyg bi bi-globe"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <img class="studying-imagen" src="images/logo-stackoverflow.png" alt="The odin project">
+                <p class="studying-text">
+                  Find the best answer to your technical question, you'll find almost any code!
+                </p>
+              <div class="studying-link">
+                <a href="https://stackoverflow.com/" target="_blank" rel="noopener noreferrer">
+                  <i class="link-studyg bi bi-globe"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
