Other advance on this project, almost finished. added the footer section

--- a/images/Bootstrap page exercise.html
+++ b/images/Bootstrap page exercise.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0055)file:///home/eduar/repos/Bootstrap-exercise/index.html# -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap page exercise</title>
-    <link rel="icon" type="imagen/x-icon" href="images/bicycle.svg">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Courgette&family=Gloock&display=swap" rel="stylesheet">
+    <link rel="icon" type="imagen/x-icon" href="file:///home/eduar/repos/Bootstrap-exercise/images/bicycle.svg">
+    <link rel="stylesheet" href="./Bootstrap page exercise_files/style.css">
+    <link href="./Bootstrap page exercise_files/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Bootstrap page exercise_files/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+<link href="./Bootstrap page exercise_files/css2" rel="stylesheet">
     
 </head>
 <body>
@@ -21,15 +21,15 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbar-toggler">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="file:///home/eduar/repos/Bootstrap-exercise/index.html#">
                 <i class="bi bi-bicycle"></i>
             </a>
             <ul class="navbar-nav d-flex justify-content-center align-items-center">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About me</a>
+                <a class="nav-link active" aria-current="page" href="file:///home/eduar/repos/Bootstrap-exercise/index.html#">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
+                <a class="nav-link" href="file:///home/eduar/repos/Bootstrap-exercise/index.html#">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled">Enjoy</a>
@@ -39,14 +39,14 @@
         </div>
     </nav>    
     <section class="hero alig-items-stretch">
-        <div class="hero-principal d-flex flex-column justify-content-center align-items-center" >
-            <img class="hero-image" src="images/edaur.jpeg" alt="profile pic" style="width: 225px; height: 210px; object-fit: cover; object-position: 20% 0;">
+        <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
+            <img class="hero-image" src="./Bootstrap page exercise_files/edaur.jpeg" alt="profile pic" style="width: 225px; height: 210px; object-fit: cover; object-position: 20% 0;">
             <h1>Hi, This is Eduar!</h1>
             <h2>Studying Full Stack JavaScript at The Odin Project</h2>
         </div>
         <div class="hero-inferior">
           <!-- <img class="hero-img-inferior img-fluid" src="images/imagen.svg" alt="monitor"> -->
-          <object class="hero-img-inferior img-fluid" data="images/logosok.svg" width="600" height="600"> </object>
+          <object class="hero-img-inferior img-fluid" data="./Bootstrap page exercise_files/logosok.svg" width="600" height="600"> </object>
         </div>
     </section>
     <section class="about-me dark-section">
@@ -158,7 +158,7 @@
                   <a href="https://github.com/eduarmarin/rockPaperScissors" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href=" https://eduarmarin.github.io/rockPaperScissors/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://eduarmarin.github.io/rockPaperScissors/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-globe"></i>
                   </a>
                 </div>
@@ -193,10 +193,10 @@
               <div class="overlay">
                 <p>Recipes</p>
                 <div class="iconos-container">
-                  <a href="https://github.com/eduarmarin/Bootstrap-exercise" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/eduarmarin/odin-recipes" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="https://eduarmarin.github.io/Bootstrap-exercise/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://eduarmarin.github.io/odin-recipes/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-globe"></i>
                   </a>
                 </div>
@@ -251,7 +251,7 @@
             <li class="list-group-item">The book on GitHub Enterprise Cloud Adoption</li>
           </a>
           <a href="https://resources.github.com/ghazdo/" target="_blank" rel="noopener noreferrer">
-            <li class="list-group-item">GitHub Advanced Security & Azure DevOps</li>
+            <li class="list-group-item">GitHub Advanced Security &amp; Azure DevOps</li>
           </a>
         </ul>
       </div>
@@ -269,7 +269,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="container carousel-container ">
-                <img class="studying-imagen" src="images/top2download.png" alt="The odin project">
+                <img class="studying-imagen" src="./Bootstrap page exercise_files/top2download.png" alt="The odin project">
               <p class="studying-text">
                 Learn to code HTML, CSS, Full stack JavaScript, Ruby and more, this course is only in English
               </p>
@@ -282,7 +282,7 @@
           </div>
           <div class="carousel-item">
             <div class="container">
-              <img class="studying-imagen" src="images/fcc2download.png" alt="Free Code Camp" style="font-size: smaller;">
+              <img class="studying-imagen" src="./Bootstrap page exercise_files/fcc2download.png" alt="Free Code Camp" style="font-size: smaller;">
                 <p class="studying-text">
                   You can get many certifications about coddding, there are many tutorials in english and even spanish
                 </p>
@@ -295,7 +295,7 @@
           </div>
           <div class="carousel-item">
             <div class="container">
-              <img class="studying-imagen" src="images/sof4images.png" alt="StackOverFlow">
+              <img class="studying-imagen" src="./Bootstrap page exercise_files/sof4images.png" alt="StackOverFlow">
                 <p class="studying-text">
                   Find the best answer to your technical question, you'll find almost any code!
                 </p>
@@ -347,9 +347,9 @@
             <i class="bi bi-github"></i>
           </a>
           <a href="https://www.linkedin.com/in/eduar-marin-castro" target="_blank" rel="noopener noreferrer">
-            <i class="bi bi-linkedin"></i>
+            <i class="bi bi-lnkedin"></i>
           </a>
-          <a href="https://twitter.com/donsecun?t=RR8vBiKNUMBMLuYR0_S1Pw&s=08" target="_blank" rel="noopener noreferrer">
+          <a href="https://twitter.com/donsecun?t=RR8vBiKNUMBMLuYR0_S1Pw&amp;s=08" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-twitter"></i>
           </a>
           <a href="https://instagram.com/eduar.c.marin?igshid=ZDdkNTZiNTM=" target="_blank" rel="noopener noreferrer">
@@ -360,6 +360,6 @@
           </a>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
-</html>
+    <script src="./Bootstrap page exercise_files/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+</body></html>
