--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
             </a>
             <ul class="navbar-nav d-flex justify-content-center align-items-center">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About me</a>
+                <a class="nav-link" href="#about-me">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
+                <a class="nav-link" href="#projects">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Enjoy</a>
+                <a class="nav-link" href="#learn-code">Learn Code</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#Contact">Contact</a>
               </li>
             </ul>
           </div>
@@ -49,7 +52,7 @@
           <object class="hero-img-inferior img-fluid" data="images/logosok.svg" width="600" height="600"> </object>
         </div>
     </section>
-    <section class="about-me dark-section">
+    <section id="about-me" class="about-me dark-section">
       <div class="container">
         <h2 class="tittle-section white-text">About me</h2>
         <p class="text-section">Mecahtronic engineer, from Colombia by now living in Spain; learning programming at The Odin Project, improoving coding at html, CSS, JavaScript, Git and GitHub(eduarmarin), Bootstrap and React!</p>
@@ -102,7 +105,7 @@
         </div>
       </div>
     </section>
-    <section class="recently-projects light-section d-fle flex-column">
+    <section id="projects" class="recently-projects light-section d-fle flex-column">
       <h2 class="tittle-section black-text">Projects</h2>
       <h3 class="description-section">these are some of the projects done recently!</h3>
       <!-- projects gallery--> 
@@ -262,7 +265,7 @@
         </button>
       </a>
     </section>
-    <section class="studying light-section">
+    <section id="learn-code" class="studying light-section">
       <h2 class="tittle-section">Learn Code</h2>
       <h3 class="description-section desccription-study">Coding for Beginners and How to Learn Programming for Free</h3>
       <div id="carouselExample" class="carousel slide carousel-dark">
@@ -317,7 +320,7 @@
         </button>
       </div>
     </section>
-    <section class="contact dark-section">
+    <section id="Contact" class="contact dark-section">
       <div class="container">
         <div class="container text-center d-flex justify-content-evenly rectangle">
           <div class="row">
@@ -340,9 +343,11 @@
       </div>
     </section>
     <footer class="dark-section d-flex flex-column align-items-center justify-content-center">
-      <i class="bi bi-binoculars footer-icon"></i>
+      <div class="footer-icon">
+        <i class="bi bi-binoculars"></i>
+      </div>  
       <p class="footer-text text-center">Continually learning.<br>Bulding new projects.</p>
-        <div class="redes-icon d-flex flex-wrap align-items-center justify-content-center">
+      <div class="redes-icon d-flex flex-wrap align-items-center justify-content-center">
           <a href="https://github.com/eduarmarin" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-github"></i>
           </a>
@@ -358,7 +363,8 @@
           <a href="mailto:donsecun@gmail.com" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-envelope"></i>
           </a>
-        </div>
+      </div>
+      <div class="copy-right"> &#169; 2023 Eduar Marin</div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
