--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap page exercise</title>
+    <title>Portfolio page exercise</title>
     <link rel="icon" type="imagen/x-icon" href="images/bicycle.svg">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -107,7 +107,7 @@
     </section>
     <section id="projects" class="recently-projects light-section d-fle flex-column">
       <h2 class="tittle-section black-text">Projects</h2>
-      <h3 class="description-section">these are some of the projects done recently!</h3>
+      <h3 class="description-section">These are some of the projects done recently!</h3>
       <!-- projects gallery--> 
       <div class="container text-center projects-container">      
         <div class="row">
@@ -267,7 +267,7 @@
     </section>
     <section id="learn-code" class="studying light-section">
       <h2 class="tittle-section">Learn Code</h2>
-      <h3 class="description-section desccription-study">Coding for Beginners and How to Learn Programming for Free</h3>
+      <h3 class="description-section desccription-study">Coding for beginners and how to learn programming for free</h3>
       <div id="carouselExample" class="carousel slide carousel-dark">
         <div class="carousel-inner">
           <div class="carousel-item active">
